libs/pavex_cli/tests/ui_tests/tuple_input_parameters_are_not_handled_by_constructors/expectations/stderr.txt
Error: 
  × One of the input parameters for `app::stream_file` has a type that I
  │ cannot handle.
    ╭─[src/lib.rs:9:1]
  9 │ pub fn blueprint() -> AppBlueprint {
 10 │     AppBlueprint::new().constructor(f!(crate::stream_file), Lifecycle::Singleton)
    ·                                     ───────────┬──────────
    ·                                                ╰── The constructor was registered here
 11 │ }
    ╰────

Error: 
  × 
   ╭─[src/lib.rs:4:1]
 4 │ 
 5 │ pub fn stream_file(input: (usize, isize)) -> Logger {
   ·                           ───────┬──────
   ·                                  ╰── The parameter type that I cannot handle
 6 │     todo!()
   ╰────